# raggy

./: .gitignore  .raggy.json.example  CHANGELOG.md  COMPLEXITY_REDUCTION_REPORT.md  DEPRECATION_NOTICE.md  README.md  REDUNDANT.md  REFACTORING_SUMMARY.md  TESTING_ISSUES.md  TODO_CRITICAL.md  TODO_MEDIUM.md  pyproject.toml  raggy.py  raggy_cli.py  requirements-dev.txt
.backlog/tasks-package-upgrade/: 00-pre-upgrade-foundation.yaml  01-python-version-upgrade.yaml  02-core-dependencies-upgrade.yaml  03-optional-dependencies-upgrade.yaml  PY-006-findings.md  README.md  ROLLBACK.md  baseline-bandit.txt  baseline-mypy.txt  baseline-packages.txt  baseline-ruff.txt  baseline-test-results.txt  execution-plan.yaml  state.yaml  task-status.yaml  tech-stack.yaml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: python-code-quality-engineer.md  python-complexity-reducer.md  python-document-processor.md  python-rag-backend-engineer.md  python-refactoring-architect.md  python-security-auditor.md  python-testing-engineer.md
.github/workflows/: test.yml
docs/: configuration.md  setup-guide.md  vector-databases.md
docs/artifacts/: CODE_QUALITY_AUDIT_REPORT.md  QUALITY_VIOLATIONS.csv
examples/: memory_api_examples.py
raggy/: __init__.py
raggy/cli/: __init__.py  base.py  commands.py  factory.py
raggy/config/: __init__.py  cache.py  constants.py  loader.py  raggy_config.py
raggy/core/: __init__.py  chromadb_adapter.py  database.py  database_interface.py  document.py  memory.py  pinecone_adapter.py  rag.py  search.py  supabase_adapter.py  vector_store_factory.py
raggy/embeddings/: __init__.py  factory.py  openai_provider.py  provider.py  sentence_transformers_provider.py
raggy/query/: __init__.py  processor.py
raggy/scoring/: __init__.py  bm25.py  normalization.py
raggy/setup/: __init__.py  dependencies.py  environment.py  interactive.py
raggy/utils/: __init__.py  logging.py  patterns.py  security.py  symbols.py  updates.py
tests/: conftest.py  test_bm25.py  test_chunking.py  test_document_processing.py  test_interactive_setup.py  test_memory.py  test_memory_api.py  test_memory_lifecycle.py  test_raggy.py
